[package]
name = "treepp"
version = "0.3.1"
edition = "2024"
authors = ["WaterRun"]
description = "A better tree command for Windows"
repository = "https://github.com/Water-Run/treepp"
license = "GPL-3.0"
readme = "README.md"
keywords = ["tree", "directory", "cli", "windows"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
rayon = "1.11.0"
walkdir = "2.5.0"
ignore = "0.4.25"
glob = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml = "0.9.34"
toml = "0.9.10"
thiserror = "2.0.17"
encoding_rs = "0.8"
dunce = "1.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.24.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "treepp"
path = "src/main.rs"