[package]
name = "match_rules"
version = "0.1.0"
edition = "2024"
description = "tree++ 过滤与规则引擎原型"
authors = ["WaterRun"]

[dependencies]
globset = "0.4"
ignore = "0.4"
thiserror = "2"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"