[package]
name = "scan_engine"
version = "0.1.0"
edition = "2024"
authors = ["WaterRun"]
description = "tree++ 扫描引擎：高性能目录树扫描库"
repository = "https://github.com/Water-Run/treepp"
license = "GPL-3.0"

[lib]
name = "scan_engine"
path = "src/lib.rs"

[[bin]]
name = "scan_engine"
path = "src/main.rs"

[dependencies]
rayon = "1.10"
thiserror = "2"

[dev-dependencies]
tempfile = "3"